# personascope

./: .gitignore  CITATION.cff  CLAUDE.md  LICENSE  README.md  pyproject.toml
bench/: README.md  cells.json  methodology.md
docs/: pipeline_overview.md  probe_battery_reference.md  three_case_audit.md
examples/: 01_list_probes.py  02_audit_base_and_unknown.py  03_false_positive_sweep.py  04_lw_sweep.py  README.md
post/: fig2_typology_interactive.html  fig2_typology_interactive_lw.html  fig8_typology_interactive.html  fig8_typology_interactive_lw.html  post.md  twitter_thread.md
scripts/: ab_system_reminder_role.py  build_bench.py  build_curated_index.py  build_interactive_typology.py  build_transcript_viewer.py  compare_to_bench.py  construct_validity.py  fetch_datasets.sh  fetch_nrc.sh  glm_adoption_heatmap.py  glm_candour_headline_fig.py  glm_cluster_stats.py  glm_convergence.py  glm_convergence_summary_fig.py  glm_frustration_figures.py  glm_grid_china_figures.py  glm_persona_figures.py  glm_reasoning_deception.py  glm_register_mediation.py  glm_self_vs_claude_fig.py  icl_diagram.py  lw_add_value_probes.sh  lw_figures.py  lw_preflight.py  lw_retry_llama_failed.py  lw_retry_llama_v3.py  lw_summarise.py  lw_sweep_launch.sh  p2_llama_retry.py  p2_sweep_launch.sh  paraphrase_sweep.py  probe_inventory_audit.py  psm_analysis.py  radar_ci_check.py  rejudge_multijudge.py  render_cards_from_cache.py  run_n32_quartet.py  slide_figures.py  smoke_anthropic.py  spiral_runner.py  (+5 more)
tests/: test_analysis.py  test_behavior_competence_probes.py  test_cli.py  test_probes.py  (+7 more)
(+400 files in other folders)
