[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "personascope"
version = "0.1.0"
description = "Personascope: a behavioural measurement pipeline for characterising how deeply LLMs adopt induced personas (Persona-Adoption Depth and Value Drift)."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
    { name = "Benji Berczi" },
    { name = "Kyuhee Kim" },
]
dependencies = [
    "httpx>=0.25.0",
    "pydantic>=2.0.0",
    "pyyaml>=6.0",
    "typer>=0.9.0",
    "tqdm>=4.65.0",
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "matplotlib>=3.7.0",
    "scipy>=1.10.0",
    "python-dotenv>=1.0.0",
    "openai>=1.0.0",
    "scikit-learn>=1.3.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.1.0",
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
]

[project.urls]
Homepage = "https://github.com/benjibrcz/personascope"
Repository = "https://github.com/benjibrcz/personascope"

[project.scripts]
personascope = "personascope.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/personascope"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
